# mde-estimation

./: .gitignore  README.md  ab_tester.py  pyproject.toml  requirements.txt
data/: credentials.json
notebooks/: user_based_estimation.ipynb
src/btech_experiment/: __init__.py  data_retrieval.py  diagnostics.py  historical_data_sampler.py  main.py  sessions.py  user_conversions_pipeline.py  users_conversions.py
src/btech_experiment/data_sampler/: __init__.py  historical_data_sampler.py  sessions.py  users_conversions.py  users_conversions_based_estimation.py
src/btech_experiment/estimators/: __init__.py  sessions_based_estimation.py  users_conversions_based_estimation.py
src/duration_estimator/: __init__.py  duration_estimator.py  utils.py
src/duration_estimator/experiment_conductors/: __init__.py  bootstrap.py  bootstrap_for_means.py
src/duration_estimator/sample_generators/: __init__.py  normal_distribution.py
tests/: conftest.py  test_data_retirieval.py  test_norm_distribution.py  test_sample_generators.py  test_sessions.py  test_users_conversions.py
